--- a/vyos.yml
+++ b/vyos.yml
@@ -285,17 +285,6 @@
           config_trap: no
           group:
             address_group:
-              - name: "DNS-SERVICES-v4"
-                description: "DNS services ({{ ansible_managed }})"
-                members:
-                  - address: "10.117.0.3"
-                  - address: "10.117.0.4"
-              - name: "DNS-SERVICES-v6"
-                description: "DNS services ({{ ansible_managed }})"
-                afi: "ipv6"
-                members:
-                  - address: "fd36:3eb3:43b0:75::3"
-                  - address: "fd36:3eb3:43b0:75::4"
               - name: "MAN-TALKERS-from-HOME-v4"
                 description: "IP Addresses allowed to talk to devices on MAN ({{ ansible_managed }})"
                 members:
@@ -490,15 +479,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v4"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -549,15 +529,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v4"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -583,15 +554,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v4"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -617,15 +579,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v4"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -651,15 +604,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v4"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -1730,15 +1674,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v6"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -1764,15 +1699,6 @@
                     action: "drop"
                     state:
                       invalid: true
-                  - number: 10
-                    description: "Allow DNS ({{ ansible_managed }})"
-                    action: "accept"
-                    state:
-                      new: true
-                    destination:
-                      group:
-                        address_group: "DNS-SERVICES-v6"
-                        port_group: "DNS"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -2387,6 +2313,11 @@
         lines:
           - "set service dns forwarding allow-from 10.0.0.0/8"
           - "set service dns forwarding allow-from fd00::/8"
+          - "set service dns forwarding domain tswn.us server 10.10.0.3"
+          - "set service dns forwarding domain tswn.us server 10.10.0.4"
+          - "set service dns forwarding domain tswn.us server 10.10.0.4"
+          - "set service dns forwarding domain tswn.us server fd36:3eb3:43b0:a::3"
+          - "set service dns forwarding domain tswn.us server fd36:3eb3:43b0:a::4"
           - "set service dns forwarding listen-address 10.117.0.{{ vyos__host_id_ipv4 }}"
           - "set service dns forwarding listen-address fd36:3eb3:43b0:75::{{ vyos__host_id_ipv6 }}"
           - "set service dns forwarding name-server 1.0.0.1"
@@ -2402,27 +2333,19 @@
           # UNIFI-MAN
           - "set service router-advert interface {{ vyos__lan_interface }} link-mtu 1492"
           - "set service router-advert interface {{ vyos__lan_interface }} prefix ::/64 valid-lifetime 172800"
+          - "set service router-advert interface {{ vyos__lan_interface }} name-server fd36:3eb3:43b0:1::{{ vyos__host_id_ipv6 }}"
+          - "set service router-advert interface {{ vyos__lan_interface }} name-server fd36:3eb3:43b0:1::{{ vyos__peer_host_id_ipv6 }}"
           # MAN
           - "set service router-advert interface {{ vyos__lan_interface }}.10 link-mtu 1492"
           - "set service router-advert interface {{ vyos__lan_interface }}.10 prefix ::/64 valid-lifetime 172800"
+          - "set service router-advert interface {{ vyos__lan_interface }}.10 name-server fd36:3eb3:43b0:a::{{ vyos__host_id_ipv6 }}"
+          - "set service router-advert interface {{ vyos__lan_interface }}.10 name-server fd36:3eb3:43b0:a::{{ vyos__peer_host_id_ipv6 }}"
           # HOME
           - "set service router-advert interface {{ vyos__lan_interface }}.117 link-mtu 1492"
           - "set service router-advert interface {{ vyos__lan_interface }}.117 prefix ::/64 valid-lifetime 172800"
+          - "set service router-advert interface {{ vyos__lan_interface }}.117 name-server fd36:3eb3:43b0:75::{{ vyos__host_id_ipv6 }}"
+          - "set service router-advert interface {{ vyos__lan_interface }}.117 name-server fd36:3eb3:43b0:75::{{ vyos__peer_host_id_ipv6 }}"
         save: yes
-      tags:
-        - services
-        - route-advert
-    - name: "Setup Router Advertisement Name Servers"
-      vyos.vyos.vyos_config:
-        lines:
-          # UNIFI-MAN
-          - "set service router-advert interface {{ vyos__lan_interface }} name-server {{ item }}"
-          # MAN
-          - "set service router-advert interface {{ vyos__lan_interface }}.10 name-server {{ item }}"
-          # HOME
-          - "set service router-advert interface {{ vyos__lan_interface }}.117 name-server {{ item }}"
-        save: yes
-      loop: "{{ common__nameservers.addresses | ansible.netcommon.ipv6 }}"
       tags:
         - services
         - route-advert
