--- a/host_vars/maccabeus01.hogs.tswn.us.yml
+++ b/host_vars/maccabeus01.hogs.tswn.us.yml
@@ -2,6 +2,7 @@
 vyos__host_id_ipv4: "48"
 vyos__host_id_ipv6: "30"
 vyos__peer_host_id_ipv4: "49"
+vyos__peer_host_id_ipv6: "31"
 vyos__vrrp_priority: 25
 vyos__wan_centurylink_interface: "eth0"
 vyos__wan_cellular_interface: "eth2"
